@@ -8,6 +8,10 @@ Changes in version 1.3.3:
 
 * Reading domain process data via sysfs.
 * Added e1000 driver for kernel 2.6.22.
+* Fixed unnecessary watchdog executions in e1000 drivers (thanks to
+  Olav Zarges).
+* Fixed missing protection for a spin_lock_irqrestore() call in e1000
+  drivers from 2.6.20 to 2.6.24 (thanks to Olav Zarges).
 * Reduced watchdog function executions in e1000 drivers.
 * Fixed sync manager configuration problem for some slaves.
 
